...
            await loadRepository()
        }
    }
    
    private func repositoryContent(_ repo: GitHubFullRepository) -> some View {
        List {
            RepositoryValueView(key: "Name") {
                Text(repo.name)
                    .foregroundColor(.secondary)
            }

            RepositoryValueView(key: "Description") {
                if let description = repo.description {
...
                    Text("No description")
                        .foregroundColor(.secondary)
                        .italic()
                }
            }

            RepositoryValueView(key: "Stars") {
                Text("\(currentStarCount ?? repo.stargazersCount)")
                    .foregroundColor(.secondary)
            }

            RepositoryValueView(key: "Forks") {
                Text("\(repo.networkCount)")
...
