...
        case loading
        case loaded([GitHubMinimalRepository])
        case error(String)
    }
    
    @Published private(set) var state: State = .idle
    @Published private(set) var currentOrganisation: String = "swiftlang"
    @Published private(set) var starCounts: [Int: Int] = [:]
    
    private var gitHubAPI: GitHubAPI
    private let mockLiveServer: MockLiveServer
    private var subscriptions = Set<AnyCancellable>()
    
...
